--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,35 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>MyProject</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-  </style>
 </head>
+
 <body>
-  <app-root></app-root>
+  <app-root>Loading...</app-root>
+  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyC9lJnlctYWf-Ls_l29y1QY10Hn--CzhmY",
+      authDomain: "angular-firebase-72844.firebaseapp.com",
+      databaseURL: "https://angular-firebase-72844.firebaseio.com",
+      projectId: "angular-firebase-72844",
+      storageBucket: "angular-firebase-72844.appspot.com",
+      messagingSenderId: "21143885372"
+    };
+    firebase.initializeApp(config);
+    const root = firebase.database().ref('messages/2')
+
+    root.on('value', (snap) => {
+      console.log(snap.key, snap.val())
+    })
+  </script>
+
 </body>
+
 </html>
